$NetBSD: CHANGES-2018,v 1.3723 2018/08/21 11:56:48 wiz Exp $

Changes to the packages collection and infrastructure in 2018:

	Updated sysutils/open-vm-tools to 10.2.0 [ryoon 2018-01-01]
	Updated www/firefox to 57.0.3 [ryoon 2018-01-01]
	Updated www/firefox-l10n to 57.0.3 [ryoon 2018-01-01]
	Added graphics/icoutils version 0.32.2 [ryoon 2018-01-01]
	Updated net/nsd to 4.1.19 [ryoon 2018-01-01]
	Updated graphics/libwebp to 0.6.1 [ryoon 2018-01-01]
	Removed www/apache22 [wiz 2018-01-01]
	Removed security/otptool [wiz 2018-01-01]
	Removed www/ap-auth-mysql [wiz 2018-01-01]
	Removed www/ap-fastcgi [wiz 2018-01-01]
	Removed www/ap-geoip2 [wiz 2018-01-01]
	Removed www/ap-scgi [wiz 2018-01-01]
	Removed www/ap2-auth-external [wiz 2018-01-01]
	Removed www/ap2-auth-mysql [wiz 2018-01-01]
	Removed www/ap2-auth-ntlm [wiz 2018-01-01]
	Removed www/ap2-auth-pgsql [wiz 2018-01-01]
	Removed www/ap2-auth-radius [wiz 2018-01-01]
	Removed www/ap2-auth-xradius [wiz 2018-01-01]
	Removed www/ap2-authn-otp [wiz 2018-01-01]
	Removed www/ap2-bw [wiz 2018-01-01]
	Removed www/ap2-cband [wiz 2018-01-01]
	Removed www/ap2-suphp [wiz 2018-01-01]
	Removed www/ap2-transform [wiz 2018-01-01]
	Removed www/ap22-authn-sasl [wiz 2018-01-01]
	Removed www/ap22-authnz-external [wiz 2018-01-01]
	Removed www/ap22-limitipconn [wiz 2018-01-01]
	Removed www/ap22-vhost-ldap [wiz 2018-01-01]
	Updated net/syncthing to 0.14.42 [wiz 2018-01-01]
	Updated net/dhcpcd to 7.0.0 [roy 2018-01-01]
	Updated sysutils/checkperms to 1.12 [rillig 2018-01-01]
	Updated pkgtools/pkglint to 5.4.22 [rillig 2018-01-01]
	Updated devel/libatomic_ops to 7.6.2 [adam 2018-01-01]
	Updated devel/boost-jam to 1.66.0 [adam 2018-01-01]
	Updated devel/boost-headers to 1.66.0 [adam 2018-01-01]
	Updated devel/boost-libs to 1.66.0 [adam 2018-01-01]
	Updated devel/boost-docs to 1.66.0 [adam 2018-01-01]
	Updated devel/boost-build to 1.66.0 [adam 2018-01-01]
	Updated devel/boost-mpi to 1.66.0 [adam 2018-01-01]