@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2718 2018/08/21 09:23:13 wiz Exp $
+# $NetBSD: Makefile,v 1.2719 2018/08/21 12:00:50 wiz Exp $
 #
 
 COMMENT=	Development utilities
@@ -849,7 +849,6 @@ SUBDIR+=	p5-Algorithm-Permute
 SUBDIR+=	p5-Alien-Base-ModuleBuild
 SUBDIR+=	p5-Alien-Build
 SUBDIR+=	p5-Alien-Packages
-SUBDIR+=	p5-Alien-Role-Alt
 SUBDIR+=	p5-Alien-SDL
 SUBDIR+=	p5-AnnoCPAN-Perldoc
 SUBDIR+=	p5-Any-Moose
