@@ -1,6 +1,0 @@
-$NetBSD: distinfo,v 1.2 2018/08/21 09:55:41 wiz Exp $
-
-SHA1 (Alien-Role-Alt-0.04.tar.gz) = 0cf9cce6864584ce0edb5b7693bd271a5b395cdb
-RMD160 (Alien-Role-Alt-0.04.tar.gz) = c531178918e7050c341eb8d0ac57c96c793e62bf
-SHA512 (Alien-Role-Alt-0.04.tar.gz) = 6d891633b6eded7e50fb1e32ad5707970a4a734d1de76e6c4d7f29daf600f7e2640aa325a3847fb09780cf3917eaf50f5cb216c538aa600ef0d5447e95596234
-Size (Alien-Role-Alt-0.04.tar.gz) = 14935 bytes
